# mdrouter

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: pricing.example.json  providers.json
config/providers/: ark.json  go.json  novita.json  zen.json
mdrouter/: __init__.py  __main__.py  config.py  main.py  models.py  ops.py  router.py  runtime.py
mdrouter/adapters/: __init__.py  base.py  openai_compat.py
systemd/: mdrouter.service  mdrouter@.service  mdrouterctl
tests/: test_api.py  test_config.py  test_openai_adapter.py  test_ops.py  test_router.py  test_runtime.py  test_semantic_cache.py
